# pcbmode

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg
docs/source/: components.rst  index.rst  setup.rst  shapes.rst  the-board-file.rst  workflow.rst
src/pcbmode/: pcbmode.py
src/pcbmode/utils/: component.py  extract.py  footprint.py  layer_index.py  module.py  shape.py  utils.py
