[project]
name = "PCBModE"
description = "A printed circuit board design tool with a twist"
version = "5.0.0a1"
readme = "README.md"
authors = [{name = "Saar Drimer", email = "saardrimer@gmail.com"}]
license = {file = "LICENSE"}
keywords = ["pcb", "svg", "eda", "pcbmode"]

dependencies = [ "lxml>=4.4.0", "pyparsing>=2.4.2" ]
requires-python = ">=3.7.0"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/boldport/pcbmode"

[project.scripts]
pcbmode = "pcbmode.pcbmode:main"

